methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:23: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    if(getCouleurSol()==c:Color){
                      ^SlugSnail:23: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if(getCouleurSol()==c:Color){
                         ^SlugSnail:30: error: not found: value green
  return green
         ^